Bug 260725: quoting a message for a reply must maintain user's display encoding selection. Patch by Eyal Rozenberg <eyalroz@technion.ac.il>, r=smontagu, sr=bienvenu